--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -16,3 +16,6 @@ spec:
     automated:
       prune: true
       selfHeal: true
+
+
+# kubectl create secret docker-registry ghcr-secret --docker-server=ghcr.io --docker-username=<babsontimie> --docker-password=<Coderepo-password> --namespace=default	
