--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: grade-submission-api
-  namespace: default
+  namespace: dev
 spec:
   replicas: 1
   selector:
