--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -12,7 +12,7 @@ spec:
     path: .
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: dev
   syncPolicy:
     automated:
       prune: true
