--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -18,3 +18,24 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: nginx-api
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/babsontimie/kubernetes-api-gitops.git
+    targetRevision: HEAD
+    path: .
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: dev
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
