--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: grade-submission-api
+  name: nginx-api
   namespace: dev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: grade-submission-api
+      app: nginx-api
   template:
     metadata:
       labels:
-        app: grade-submission-api
+        app: nginx-api
     spec:
       imagePullSecrets:
         - name: ghcr-secret
       containers:
-        - name: grade-submission-api
-          image: ghcr.io/babsontimie/kubernetes-cicd-tutorial:98e62bff17c57ab348d6f4a6e5f886797a66bcbe
+        - name: nginx-api
+          image: ghcr.io/babsontimie/nginx:latest
           ports:
-            - containerPort: 3000
+            - containerPort: 80
           resources:
             limits:
               memory: "256Mi"
@@ -31,12 +31,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: grade-submission-api
+  name: nginx-api
   namespace: dev
 spec:
   selector:
-    app: grade-submission-api
+    app: nginx-api
   ports:
-    - port: 80
-      targetPort: 3000
+    - port: 8080
+      targetPort: 80
   type: NodePort
